--- a/games/kirby.html
+++ b/games/kirby.html
@@ -26,7 +26,7 @@
 <canvas id="nes-canvas" width="256" height="240"></canvas>
 
 <script>
-    const ROM_URL = "https://github.com/TheRealTonyTonyChopper/Kirbys-Adventure-NES/raw/refs/heads/main/kirby.nes";
+    const ROM_URL = "https://raw.githubusercontent.com/TheRealTonyTonyChopper/steamexpokirby/main/games/nes/kirby.nes";
 
     const canvas = document.getElementById("nes-canvas");
     const ctx = canvas.getContext("2d");
