--- a/games/kirby.html
+++ b/games/kirby.html
@@ -2,53 +2,45 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Kirbys Adventure NES</title>
-    <script src="https://unpkg.com/jsnes/dist/jsnes.min.js"></script>
+    <title>Kirby’s Adventure</title>
     <style>
-        html, body {
+        body {
             margin: 0;
-            padding: 0;
-            height: 100%;
             background: black;
             display: flex;
             justify-content: center;
             align-items: center;
-        }
-        canvas {
-            width: 100vw;
             height: 100vh;
-            image-rendering: pixelated;
+        }
+        iframe {
+            border: none;
+        }
+        .back {
+            position: fixed;
+            top: 10px;
+            left: 10px;
+            padding: 8px 14px;
+            background: rgba(0,0,0,0.6);
+            color: white;
+            font-family: sans-serif;
+            border-radius: 6px;
+            text-decoration: none;
         }
     </style>
 </head>
 <body>
 
-<canvas id="nes-canvas" width="256" height="240"></canvas>
+<a class="back" href="../index.html">← Back</a>
 
-<script>
-    const ROM_URL = "https://github.com/TheRealTonyTonyChopper/steamexpokirby/raw/refs/heads/main/games/nes/kirby.nes";
-
-    const canvas = document.getElementById("nes-canvas");
-    const ctx = canvas.getContext("2d");
-    const img = ctx.getImageData(0, 0, 256, 240);
-
-    const nes = new jsnes.NES({
-        onFrame(frameBuffer) {
-            for (let i = 0; i < frameBuffer.length; i++) {
-                img.data[i] = frameBuffer[i];
-            }
-            ctx.putImageData(img, 0, 0);
-        }
-    });
-
-    fetch(ROM_URL)
-        .then(r => r.arrayBuffer())
-        .then(buf => {
-            nes.loadROM(new Uint8Array(buf));
-            setInterval(() => nes.frame(), 1000 / 60);
-        })
-        .catch(err => console.error("ROM load error:", err));
-</script>
+<iframe 
+    src="https://www.retrogames.cc/embed/22129-kirby-s-adventure-usa.html"
+    width="600"
+    height="450"
+    allowfullscreen="true"
+    webkitallowfullscreen="true"
+    mozallowfullscreen="true"
+    scrolling="no">
+</iframe>
 
 </body>
 </html>
