--- a/games/kirby.html
+++ b/games/kirby.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Kirby’s Adventure</title>
+    <title>Kirby’s Adventure NES</title>
     <style>
         body {
             margin: 0;
